--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,5 @@
 * {
-  font-family: Inter var, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .nav-link {
