--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,10 @@
 * {
-  font-family: Inter var, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .nav-link {
   font-weight: 400;
+  color: green;
 }
 
 .nav-route .nav-link {
@@ -45,7 +45,6 @@
 
 .nav-route .active {
   font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
 }
 
 .text-gray {
@@ -54,11 +53,15 @@
 }
 
 .font-light {
-  font-family: 'Times New Roman', Times, serif;
   font-weight: 300;
 }
 
 .text-base {
   font-size: 1rem;
   line-height: 1rem;
+}
+
+.footers-content{
+  display: flex !important;
+  justify-content: end;
 }
